<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/app_navigation"
    app:startDestination="@id/movies_fragment">

    <fragment
        android:id="@+id/movies_fragment"
        android:name="com.vickikbt.kyoskinterview.ui.fragments.movies.MoviesFragment"
        android:label="@string/title_movies"
        tools:layout="@layout/fragment_movies" />

    <fragment
        android:id="@+id/tv_shows_fragment"
        android:name="com.vickikbt.kyoskinterview.ui.fragments.tv_shows.TvShowsFragment"
        android:label="@string/title_tv_shows"
        tools:layout="@layout/fragment_tv_shows" />

    <fragment
        android:id="@+id/profile_fragment"
        android:name="com.vickikbt.kyoskinterview.ui.fragments.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>