<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.movies.MoviesFragment">

    <!--region Top Bar-->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar_movies"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/surfaceColor"
        app:elevation="4dp"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar_movies"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:menu="@menu/search_menu"
            app:title="@string/title_movies"
            app:titleTextAppearance="@style/ToolbarTextAppearance" />
    </com.google.android.material.appbar.AppBarLayout>
    <!--endregion-->

    <ScrollView
        android:id="@+id/scrollview_movies"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBar_movies">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--region In Theater-->
            <TextView
                android:id="@+id/textView_popular_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:ellipsize="end"
                android:fontFamily="@font/roboto_medium"
                android:maxLines="1"
                android:text="@string/in_theaters"
                android:textColor="@color/textSecondary"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/viewPager_in_theaters"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:alpha="1"
                app:layout_constraintTop_toBottomOf="@id/textView_popular_title" />
            <!--endregion-->

            <!--region Popular-->
            <LinearLayout
                android:id="@+id/linearLayout_popular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="16dp"
                app:layout_constraintTop_toBottomOf="@id/viewPager_in_theaters">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:ellipsize="end"
                    android:fontFamily="@font/roboto_medium"
                    android:maxLines="1"
                    android:text="@string/popular"
                    android:textColor="@color/textSecondary"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:fontFamily="@font/roboto_regular"
                    android:maxLines="1"
                    android:text="@string/see_all"
                    android:textColor="#989898"
                    android:textSize="15sp" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview_popular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:alpha="1"
                android:orientation="horizontal"
                android:scrollbars="none"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/linearLayout_popular"
                tools:listitem="@layout/item_rv_movie" />
            <!--endregion-->

            <!--region Top 250-->
            <LinearLayout
                android:id="@+id/linearLayout_top_250"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="16dp"
                app:layout_constraintTop_toBottomOf="@id/recyclerview_popular">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:ellipsize="end"
                    android:fontFamily="@font/roboto_medium"
                    android:maxLines="1"
                    android:text="@string/top_250_movies"
                    android:textColor="@color/textSecondary"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:fontFamily="@font/roboto_regular"
                    android:maxLines="1"
                    android:text="@string/see_all"
                    android:textColor="#989898"
                    android:textSize="15sp" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview_top_250"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:alpha="1"
                android:orientation="horizontal"
                android:scrollbars="none"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/linearLayout_top_250"
                tools:listitem="@layout/item_rv_movie" />
            <!--endregion-->

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>